@@ -1,5 +1,14 @@
 # $Id$
 
+2007-08-17	Anton E. Lebedevich
+
+	* main/Utils/TextUtils.class.php: hex2Binary() added.
+
+2007-08-15	Denis M. Gabaidulin
+
+	* core/Form/Filters/NormalizeUrlFilter.class.php: url normalizator filter
+	was added. Bases on new HttpUrl parser.
+
 2007-08-15	Anton E. Lebedevich
 
 	*  main/Utils/Http/CurlHttpClient.class.php,
